--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
 </head>
 
 <body>
-    <div id='display'>
-        <p>Slide number <span id='slideNum'></span></p>
-        <h1 id='title'></h1>
-        <p id='text'></p>
-        <img id='img'>
-    </div>
-    <div id='btnNext'><h1>&dArr;</h1></div>
+    <div class='slideshow'>
+        <div id='display'>
+            <h1 id='title'></h1>
+            <p id='text'></p>
+        </div>
+        <div id="img"></div>
+            <!--<img id='img' src="img/1.jpg">-->
 
+        <div id='btnNext'>
+            <h1>&dArr;</h1>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
