Add text animation

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
     <div class='slideshow'>
         <div id='display' class=''>
-            <h1 id='title'></h1>
-            <p id='text'></p>
+            <h1 id='title' class='title'></h1>
+            <p id='text' class='text'></p>
             
         </div>
         
