--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <div class='background-gradient'></div>
     <div class='slideshow'>
         <div id='display' class=''>
             <h1 id='title' class='title'></h1>
