Add fonts and animations

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <link rel="shortcut icon" href="" type="image/x-icon">
     <link rel="apple-touch-icon" href="">
+    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato&display=swap" rel="stylesheet"> 
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -32,8 +35,8 @@
             
             <!--<img id='img' src="img/1.jpg">-->
 
-        <div id='btnNext'>
-            <h1>&dArr;</h1>
+        <div id='btnNext' class='btnNext'>
+            <div class='arrow'></div>
         </div>
     </div>
 
